--- a/public/style.css
+++ b/public/style.css
@@ -34,6 +34,19 @@
     /*grid-row-start: 2; */
 }
 
+.equipCardDiv {
+    
+    /* border: 2px solid green; */
+    background-image: url('./images/screen_equip.png');
+    width: 100%;
+    min-height: 293px;
+    background-repeat: no-repeat;
+    background-size: contain;
+
+    /*grid-row-start: 2; */
+}
+
+
 
 .rightCtrl{
     
@@ -44,4 +57,8 @@
     background-repeat: no-repeat;
     background-size: cover;
  
+}
+
+.hidden{
+    display:none;
 }
