--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@
 .gamediv1 {
     
     /* border: 2px solid green; */
-    background-image: url('./images/screen_zero.png');
+    /* background-image: url('./images/screen_zero.png'); */
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
@@ -37,13 +37,42 @@
 .equipCardDiv {
     
     /* border: 2px solid green; */
-    background-image: url('./images/screen_equip.png');
+    /* background-image: url('./images/screen_equip.png'); */
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: contain;
 
     /*grid-row-start: 2; */
+}
+#btn-left{
+position:absolute;
+    background-image:url('./images/left.png');
+  min-height: 180px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 10;
+    left:-2%;
+}
+
+
+#btn-right{
+    position:absolute;
+        background-image:url('./images/right.png');
+      min-height: 180px;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: 10;
+        left:85%;
+        top:20%;
+    }
+
+#equiped{
+    background-image:url('./images/frame_glass.png');
+    width: 50%;
+    min-height: 293px;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .combatDiv {
