--- a/public/style.css
+++ b/public/style.css
@@ -16,6 +16,8 @@ h1{
 }
 
 .container {
+  
+   
     display:inline-block;
     align-items: center;
     justify-content: center;
@@ -47,11 +49,11 @@ h1{
 }
 .gamediv2 {
     border: 2px solid green;
-    /* background-image: url('./images/screen_zero.png'); */
+    background-image: url('./images/bg1.png');
     width: 100%;
     min-height: 293px;
-    background-repeat: no-repeat;
-    background-size: contain;
+    background-repeat: repeat;
+    background-size: cover;
     display:flex;
     flex-direction: row;
 /* z-index:200; */
@@ -60,19 +62,22 @@ h1{
 
 .equipCardDiv {
     
-    /* border: 2px solid green; */
+    border: 2px solid green; 
     /* background-image: url('./images/screen_equip.png'); */
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: contain;
+    display:flex;
+    flex-direction: row;
 
     /*grid-row-start: 2; */
 }
-#btn-left{
+#btn-left, #card-btn-left{
 position:absolute;
     background-image:url('./images/left.png');
-  min-height: 180px;
+    min-height: 180px;
+    min-width: 180px;
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 10;
@@ -81,10 +86,12 @@ position:absolute;
 }
 
 
-#btn-right{
+#btn-right, #card-btn-right {
     position:absolute;
         background-image:url('./images/right.png');
       min-height: 180px;
+    min-width: 180px;
+
         background-repeat: no-repeat;
         background-size: contain;
         z-index: 10;
@@ -94,11 +101,47 @@ position:absolute;
 
 
 
-    #hero{}
-    #enemy{}
-    #background1{}
+    #hero{
 
+        position:absolute;
+        background-image:url('./images/hero.png');
+      min-height: 180px;
+      min-width: 100%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: 10;
+        left:10%;
+        top:20%;
+    }
+    #enemy1{
+        position:absolute;
+        background-image:url('./images/enemy1.png');
+      min-height: 180px;
+      min-width: 100%;
+        background-repeat: no-repeat;
+        background-size: contain;
+        z-index: 10;
+        left:70%;
+        top:101%;
+    }
+#btnEquipCards{
+    position:absolute;
+    background-image:url('./images/btnEquip.png');
+  min-height: 180px;
+  min-width: 180px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 510;
+    left:43%;
+    top:20%;
+
+}
+#carousel-card-choose{
+    left:88%;
+    top:10%;
+}
 #equiped{
+    left:40%;
     background-image:url('./images/frame_glass.png');
     width: 50%;
     min-height: 293px;
