--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,3 @@
-
 @font-face {
     font-family: dragon;
     src: url('./fonts/Breathe\ Fire.otf');
@@ -9,193 +8,215 @@
     padding: 0;
 }
 
-h1{
-    font-size:4em;
-    padding-bottom:20px;
-    font-family:dragon;
+h1 {
+    font-size: 20em;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-family: dragon;
+    text-shadow: 1px 1px 5px rgba(28, 51, 255, 1);
+    font-weight: normal;
+    color: #000000;
+    letter-spacing: 6pt;
+    word-spacing: 2pt;
+}
+
+.buttonMenu {
+    display: inline-block;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-color: white;
+    border: 2px solid rgb(224, 224, 224);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 150px;
+    width: 100%;
 }
 
 .container {
-  
-   
-    display:inline-block;
+    position: absolute;
+    top: 150px;
+    width: 100%;
+    display: inline-block;
     align-items: center;
     justify-content: center;
-    text-align:center;
+    text-align: center;
 }
 
-
-.leftCtrl{
-
+.leftCtrl {
     /* border: 2px solid green; */
     /* background-image: url('./images/frame_glass.png'); */
-    width:100%;
-        min-height: 293px;
+    width: 100%;
+    min-height: 293px;
     background-repeat: no-repeat;
     background-size: cover;
-    
 }
 
 .gamediv1 {
-    
-    border: 2px solid green;
+    /* border: 2px solid green; */
     /* background-image: url('./images/screen_zero.png'); */
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: contain;
-
-    /*grid-row-start: 2; */
 }
+
 .gamediv2 {
-    border: 2px solid green;
+    /* border: 2px solid green; */
     background-image: url('./images/bg1.png');
     width: 100%;
     min-height: 293px;
     background-repeat: repeat;
     background-size: cover;
-    display:flex;
+    display: flex;
     flex-direction: row;
-/* z-index:200; */
+    /* z-index:200; */
     /*grid-row-start: 2; */
 }
 
 .equipCardDiv {
-    
-    border: 2px solid green; 
+    border: 2px solid green;
     background-image: url('./images/bg1.png');
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: contain;
-    display:flex;
+    display: flex;
     flex-direction: row;
-
     /*grid-row-start: 2; */
 }
-#btn-left, #card-btn-left{
-position:absolute;
-    background-image:url('./images/left.png');
+
+#btn-left, #card-btn-left {
+    position: absolute;
+    background-image: url('./images/left.png');
     min-height: 180px;
     min-width: 180px;
     background-repeat: no-repeat;
     background-size: contain;
     z-index: 10;
-    left:-2%;
-    top:20%;
+    left: -2%;
+    top: 20%;
 }
-
 
 #btn-right, #card-btn-right {
-    position:absolute;
-        background-image:url('./images/right.png');
-      min-height: 180px;
+    position: absolute;
+    background-image: url('./images/right.png');
+    min-height: 180px;
     min-width: 180px;
-
-        background-repeat: no-repeat;
-        background-size: contain;
-        z-index: 10;
-        left:85%;
-        top:20%;
-    }
-
-
-
-    #hero{
-
-        position:absolute;
-        background-image:url('./images/hero.png');
-      min-height: 180px;
-      min-width: 100%;
-        background-repeat: no-repeat;
-        background-size: contain;
-        z-index: 10;
-        left:10%;
-        top:20%;
-    }
-    #enemy1{
-        position:absolute;
-        background-image:url('./images/enemy1.png');
-      min-height: 180px;
-      min-width: 100%;
-        background-repeat: no-repeat;
-        background-size: contain;
-        z-index: 10;
-        left:70%;
-        top:101%;
-    }
-#btnEquipCards{
-
-    
-
-    position:absolute;
-    background-image:url('./images/btnEquip.png');
-  min-height: 180px;
-  min-width: 180px;
     background-repeat: no-repeat;
     background-size: contain;
-    z-index: 510;
-    left:43%;
-    top:20%;
+    z-index: 10;
+    left: 85%;
+    top: 20%;
+}
 
+#hero {
+    position: absolute;
+    background-image: url('./images/hero.png');
+    min-height: 180px;
+    min-width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 10;
+    left: 10%;
+    top: 20%;
 }
-#carousel-card-choose{
-    left:141%;
-    top:-44%;
+
+#enemy1 {
+    position: absolute;
+    background-image: url('./images/enemy1.png');
+    min-height: 180px;
+    min-width: 100%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 10;
+    left: 70%;
+    top: 101%;
 }
-#equiped{
-    left:40%;
-    background-image:url('./images/armed.png');
+
+
+
+#carousel-card-choose {
+    left: 141%;
+    top: -44%;
+}
+
+#equiped {
+    left: 40%;
+    background-image: url('./images/armed.png');
     width: 100%;
-
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .combatDiv {
-    
     /* border: 2px solid green; */
     background-image: url('./images/screen_combat.png');
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: contain;
-
     /*grid-row-start: 2; */
 }
 
-
-.rightCtrl{
-    
+.rightCtrl {
     /* border: 2px solid blue; */
     /* background-image: url('./images/frame_glass.png'); */
     width: 100%;
     min-height: 293px;
     background-repeat: no-repeat;
     background-size: cover;
- 
 }
 
-.hidden{
-    display:none;
+.hidden {
+    display: none;
 }
 
-#about{
-    font-size:2em;
+#about {
+    font-size: 2em;
     width: 17%;
-    min-height: 181px;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image:url('./images/about.png');
+    background-image: url('./images/about.png');
+}
+
+#play {
+    font-size: 2em;
+    width: 17%;
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-image: url('./images/play.png');
 }
 
 
-#play{
-    font-size:2em;
+#btnEquipCards {
+    position: absolute;
+    background-image: url('./images/btnEquip.png');
+    font-size: 2em;
     width: 17%;
-    min-height: 181px;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image:url('./images/play.png');
+    /* left: 43%;
+    top: 20%; */
+}
+
+.btnStyle {
+    min-height: 100px;
+    max-width: 100px;
+    border-radius: 10%;
+    margin: 20px;
+}
+
+.bottomMask {
+    display: inline-block;
+    background-color: white;
+    /* border:2px solid rgb(148, 92, 92); */
+    position: fixed;
+    top: 444px;
+    left: 0;
+    height: 183px;
+    width: 100%;
+    z-index: 600;
 }
